# thucstest

./: .gitignore  Dockerfile  build_and_run.sh  create_mariadb_user.sh  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
analysis/pl/: 0.crawler.py  analyze_matches.py  crawler.py
analysis/s3/: 0.crawler.py  analyze_matches.py  match_id_mapping.csv
backend/: .env  auth.py  config.py  main.py  models.py  requirement.txt  steam_users.db  websocket_manager.py
backend/game/: start_server.py
backend/game/providers/: aliyun_eci.py  base.py  local_docker.py  remote_docker.py  tencent_as.py
backend/models/: __init__.py  database.py  match.py  matchzy.py  session.py  user.py
backend/routers/: admin.py  auth.py  events_callback.py  game.py  matching.py  matchzy.py
backend/utils/: tasks.py  websocket.py
docs/: prd.md  prd_room.md  project_management.md
src/: App.vue  config.js  constants.js
src/api/: client.js
src/assets/: style.css
src/components/: AdminPanel.vue  FirstTimeSetup.vue  LoginPage.vue  MatchConfirmModal.vue  MatchingSystem.vue  ProfilePage.vue  UsersList.vue
src/router/: index.js
src/stores/: admin.js  auth.js  matching.js
src/views/: GameRoom.vue  Home.vue
