[project]
name = "thucspl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "python-decouple>=3.8",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "starlette>=0.47.2",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "websockets>=15.0.1",
    "mariadb>=1.1.8",
    "anyio>=4.9.0",
    "watchfiles>=1.1.0",
    "uvloop>=0.21.0",
    "typing-extensions>=4.14.1",
    "typing-inspection>=0.4.1",
    "cryptography>=45.0.5",
    "rsa>=4.9.1",
    "ecdsa>=0.19.1",
    "pyasn1>=0.6.1",
    "six>=1.17.0",
    "certifi>=2025.7.14",
    "cffi>=1.17.1",
    "click>=8.2.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.6.4",
    "idna>=3.10",
    "pycparser>=2.22",
    "python-dotenv>=1.1.1",
    "python-openid>=2.2.5",
    "docker>=7.0.0",
    "paramiko>=3.4.0",
    "tencentcloud-sdk-python-autoscaling>=3.0.0",
    "tencentcloud-sdk-python-cvm>=3.0.0",
    "alibabacloud_eci20180808>=3.0.0",
    "alibabacloud_tea_openapi>=0.3.0",
]
